packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__should_transform_three_nested_loops_handler_captures_outer_only.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 5657
expression: output
---
==INPUT==


import { component$, useSignal } from '@qwik.dev/core';

export default component$(() => {
  const data = useSignal([
    [['a', 'b'], ['c', 'd']],
    [['e', 'f'], ['g', 'h']],
  ]);
  return (
    <div>
      {data.value.map((plane, pi) => {
        const planeId = 'p' + pi;
        return (
          <div key={pi}>
            {plane.map((row, ri) => (
              <div key={ri}>
                {row.map((cell, ci) => (
                  <button key={ci} onClick$={() => console.log(planeId)}>
                    {cell}
                  </button>
                ))}
              </div>
            ))}
          </div>
        );
      })}
    </div>
  );
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const _qrl_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(_qrl_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,6BAAe,8CAyBZ\"}")
============================= test.tsx_test_component_div_div_div_button_q_e_click_7fyCCEiYKFo.js (ENTRY POINT)==

import { _captures } from "@qwik.dev/core";
//
export const test_component_div_div_div_button_q_e_click_7fyCCEiYKFo = ()=>{
    const planeId = _captures[0];
    return console.log(planeId);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;uEAiB6C;;WAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_div_div_div_button_q_e_click_7fyCCEiYKFo",
  "entry": null,
  "displayName": "test.tsx_test_component_div_div_div_button_q_e_click",
  "hash": "7fyCCEiYKFo",
  "canonicalFilename": "test.tsx_test_component_div_div_div_button_q_e_click_7fyCCEiYKFo",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    475,
    501
  ],
  "captureNames": [
    "planeId"
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
//
const i_7fyCCEiYKFo = ()=>import("./test.tsx_test_component_div_div_div_button_q_e_click_7fyCCEiYKFo");
//
export const test_component_LUXeXe0DQrg = ()=>{
    const data = useSignal([
        [
            [
                'a',
                'b'
            ],
            [
                'c',
                'd'
            ]
        ],
        [
            [
                'e',
                'f'
            ],
            [
                'g',
                'h'
            ]
        ]
    ]);
    return /*#__PURE__*/ _jsxSorted("div", null, null, data.value.map((plane, pi)=>{
        const planeId = 'p' + pi;
        const test_component_div_div_div_button_q_e_click_7fyCCEiYKFo = /*#__PURE__*/ qrl(i_7fyCCEiYKFo, "test_component_div_div_div_button_q_e_click_7fyCCEiYKFo", [
            planeId
        ]);
        return /*#__PURE__*/ _jsxSorted("div", null, null, plane.map((row, ri)=>/*#__PURE__*/ _jsxSorted("div", null, null, row.map((cell, ci)=>/*#__PURE__*/ _jsxSorted("button", {
                    "q-e:click": test_component_div_div_div_button_q_e_click_7fyCCEiYKFo
                }, null, cell, 0, ci)), 1, ri)), 1, pi);
    }), 1, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;0CAG0B;IACxB,MAAM,OAAO,UAAU;QACrB;YAAC;gBAAC;gBAAK;aAAI;YAAE;gBAAC;gBAAK;aAAI;SAAC;QACxB;YAAC;gBAAC;gBAAK;aAAI;YAAE;gBAAC;gBAAK;aAAI;SAAC;KACzB;IACD,qBACE,WAAC,mBACE,KAAK,KAAK,CAAC,GAAG,CAAC,CAAC,OAAO;QACtB,MAAM,UAAU,MAAM;;;;QACtB,qBACE,WAAC,mBACE,MAAM,GAAG,CAAC,CAAC,KAAK,mBACf,WAAC,mBACE,IAAI,GAAG,CAAC,CAAC,MAAM,mBACd,WAAC;oBAAgB,WAAQ;yBACtB,SADU,SAFP,SAFJ;IAYd;AAGN\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    85,
    671
  ]
}
*/
== DIAGNOSTICS ==

[]
